fix: Add better contrast font for buttons

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -339,6 +339,11 @@ header h1 a img {
   margin-top: initial;
 }
 
+a.button.is-success span,
+button.button span {
+  font-family: "muli-semibold", sans-serif;
+}
+
 @media (min-width: 600px) {
   #need-help .title,
   #want-to-help .title {
